--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -4,13 +4,8 @@
     }
 
     .header-section {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
         max-width: 708px;
-        margin: auto;
-        padding: 36px 0;
+        padding: 29px 0;
     }
 }
 
@@ -20,12 +15,22 @@
     }
 
     .header-section {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
+        flex-direction: column;
+        gap: 20px;
         max-width: 153px;
-        margin: auto;
-        padding: 36px 0;
+        padding: 20px 0;
+    }
+
+    .developer-name {
+        font-size: 24px;
+    }
+
+    .social-media {
+        gap: 25px;
+    }
+
+    ul li img {
+        width: 19px;
+        height: 19px;
     }
 }
