Começando a estilizar o hero.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,6 +25,10 @@ header {
     gap: 32px;
 }
 
-/* .media:hover {
-    scale: 1.1;
-} */
+.hero {
+    background-color: gray;
+}
+
+.hero .title {
+    background-color: red;
+}
