--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,5 @@
 header {
-    background-color: black;
+    background-color: #000;
     max-width: 1440px;
     margin: auto;
 }
@@ -17,6 +17,7 @@ header {
 main {
     max-width: 1440px;
     margin: auto;
+    background-color: #000;
 }
 
 .developer-name {
@@ -31,7 +32,8 @@ main {
 }
 
 .hero {
-    background-color: gray;
+    /* background-color: gray; */
+    padding-top: 91px;
 }
 
 .hero .title {
@@ -41,12 +43,33 @@ main {
 }
 
 .hero .title span {
-    /* background-color: red; */
-    border-bottom: 6px solid red;
-    text-decoration: underline red;
+    background-color: red;
 }
 
 .hero .hero-description {
+    max-width: 445px;
     color: var(--tertiary-color);
     font-size: 18px;
+    margin-top: 43px;
+    line-height: 28px;
+}
+
+.hero .btn-hero{
+    /* background-color: rebeccapurple; */
+    font-weight: 700;
+    color: var(--tertiary-color);
+    width: 117px;
+    height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 66px;
+    /* padding-bottom: 10px; */
+    border-bottom: 2px solid var(--primary-color);
+}
+
+.hero .image-profile {
+    background-color: chartreuse;
+    width: 445px;
+    /* height: auto; */
 }
