--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,6 +44,7 @@ main {
     font-size: 88px;
     font-weight: 700;
     color: var(--tertiary-color);
+    max-width: 750px;
 }
 
 .hero .title span {
@@ -76,7 +77,7 @@ main {
     display: inline-block;
     position: absolute;
     top: -112px;
-    right: 176px;
+    right: 165px;
     z-index: -1;
 }
 
