--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -69,6 +69,7 @@ main {
     justify-content: center;
     margin-top: 66px;
     border-bottom: 2px solid var(--primary-color);
+    padding-bottom: 10px;
 }
 
 .hero .image-profile {
