--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -24,16 +24,16 @@ ul li img {
 a {
     text-decoration: none;
     color: var(--tertiary-color);
-    font-weight: 700;
+    /* font-weight: 700;
     color: var(--tertiary-color);
     width: 117px;
     height: 26px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     /* margin-top: 66px; */
-    border-bottom: 2px solid var(--primary-color);
-    padding-bottom: 10px;
+    /* border-bottom: 2px solid var(--primary-color);
+    padding-bottom: 10px; */
 }
 
 img {
