Quase estilizado .projects

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -32,6 +32,13 @@ main {
     gap: 32px;
 }
 
+.social-media .media a:hover {
+    background-color: red;
+    color: rebeccapurple;
+    transform: scale(2);
+    display: inline-block;
+}
+
 .hero {
     padding-top: 91px;
 }
@@ -83,7 +90,7 @@ main {
 }
 
 .skills {
-    margin-top: 65px;
+    margin-top: 219px;
 }
 
 .skills .container-skills {
@@ -113,15 +120,15 @@ main {
     width: 100%;
     max-width: 1110px;
     margin: 0 auto;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .projects .container-projects .content-projects{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: aquamarine;
-    border: 3px solid green;
+    /* background-color: aquamarine;
+    border: 3px solid green; */
 }
 
 .projects .content-projects h2 {
@@ -149,20 +156,55 @@ main {
     grid-template-columns: repeat(2, 545px);
 }
 
-.projects .card-project {
-    border: 5px dashed rebeccapurple;
+.projects .card-project .image-project {
+    /* background-color: yellowgreen; */
+    position: relative;
 }
+
+/* .projects .card-project {
+    border: 5px dashed rebeccapurple;
+} */
 
 .projects .list-projects .picture img {
     width: 100%;
     height: auto;
 }
 
+.projects .card-project .project-title {
+    /* background-color: blue; */
+    margin-top: 20px;
+    font-size: 24px;
+}
+
+.projects .card-project .list-technologies {
+    /* background-color: burlywood; */
+    display: flex;
+    gap: 18px;
+    margin-top: 7px;
+}
+
+.projects .list-technologies .technologie {
+    font-size: 18px;
+}
+
 /* .projects .list-projects .picture {
     width: 545px;
     height: 400px;
 } */
-.teste {
+.provisoriamente1 {
     /* display: none; */
+    position: absolute;
     background-color: yellow;
+    top: 130px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.provisoriamente2 {
+    /* display: none; */
+    position: absolute;
+    background-color: yellow;
+    top: 224px;
+    left: 50%;
+    transform: translateX(-50%);
 }
