--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -101,6 +101,12 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 58px 30px;
+    background-color: red;
+}
+
+.skills .skill {
+    border: 3px dashed yellow;
+    background-color: green;
 }
 
 .skills .skill .skill-name {
