--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -169,7 +169,7 @@ main {
     display: block;
     border-bottom: 2px solid var(--primary-color);
     padding-bottom: 10px;
-    color: #fff;
+    color: var(--tertiary-color);
 }
 
 .projects .image-project:hover .link-project:active, .projects .image-project:hover .link-code:active {
@@ -207,8 +207,59 @@ main {
     display: flex;
     gap: 18px;
     margin-top: 7px;
+    color: var(--secundary-color);
 }
 
 .projects .list-technologies .technologie {
     font-size: 18px;
+}
+
+footer {
+    margin-top: 135px;
+    background-color: var(--darck-secundary);
+}
+
+footer .container-footer {
+    /* background-color: red; */
+    width: 100%;
+    max-width: 1110px;
+    margin: 0 auto;
+    padding-top: 84px;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .container-footer .title-footer {
+    font-size: 88px;
+}
+
+footer .container-footer .description-footer {
+    width: 445px;
+    font-size: 18px;
+    line-height: 28px;
+    color: var(--secundary-color);
+    margin-top: 36px;
+}
+
+footer .container-footer #formulay {
+    background-color: purple;
+    width: 445px;
+}
+
+footer .form-control .error {
+    /* background-color: blanchedalmond; */
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 1px solid var(--color-error);
+    color: var(--color-error);
+}
+
+footer .form-control .error-message {
+    color: var(--color-error);
+    font-size: 12px;
 }
